--- a/apps/seerrbridge/Dockerfile
+++ b/apps/seerrbridge/Dockerfile
@@ -69,7 +69,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY --from=cloner /source/. .
 
 # We store our env in /config/.env
-RUN  sed -i 's|\.env|/config/.env|' seerrbridge.py && \
+RUN  sed -i "s|'.env|'/config/.env|" seerrbridge.py && \
      sed -i 's|seerrbridge.log|/logs/seerrbridge.log|' seerrbridge.py
 
 # Expose the application port (if needed)
