workaround tokens.json issue
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/wests-blackhole-script/Dockerfile
+++ b/apps/wests-blackhole-script/Dockerfile
@@ -24,6 +24,9 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     tmux
 
+# tokens.json needs to exist at /config
+RUN sed -i "s|os.path.join(pathToScript, 'tokens.json')|'/config/tokens.json'"
+
 # Add ttyd
 ADD --chmod=755 https://github.com/tsl0922/ttyd/releases/download/1.7.7/ttyd.x86_64 /usr/local/bin/ttyd
 
