Update StremThru Dockerfile

--- a/apps/stremthru/Dockerfile
+++ b/apps/stremthru/Dockerfile
@@ -17,15 +17,14 @@ COPY --from=cloner /source/go.mod /source/go.sum ./
 RUN go mod download
 
 
+COPY --from=cloner /source/migrations ./migrations
 COPY --from=cloner /source/core ./core
 COPY --from=cloner /source/internal ./internal
 COPY --from=cloner /source/store ./store
-COPY --from=cloner /source/*.go ./
 COPY --from=cloner /source/stremio ./stremio
-COPY --from=cloner /source/schema.hcl source/schema.postgres.hcl ./
+COPY --from=cloner /source/*.go ./
 
-RUN mkdir -p /schema
-RUN CGO_ENABLED=1 GOOS=linux go build -tags 'heavy' -o ./stremthru -a -ldflags '-linkmode external -extldflags "-static"'
+RUN CGO_ENABLED=1 GOOS=linux go build -o ./stremthru -a -ldflags '-linkmode external -extldflags "-static"'
 
 FROM scratch
 
@@ -33,8 +32,6 @@ WORKDIR /app
 
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /workspace/stremthru ./stremthru
-COPY --from=builder /schema /tmp
-COPY --from=arigaio/atlas:0.29.0-community /atlas /usr/local/bin/atlas
 
 VOLUME ["/app/data"]
 
