Fix our build to align with upstream
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/rdtclient/Dockerfile
+++ b/apps/rdtclient/Dockerfile
@@ -94,6 +94,7 @@ RUN mkdir db && mkdir logs
 WORKDIR /app
 COPY --from=dotnet-build-env /appserver/server/out .
 COPY --from=node-build-env /appclient/client/out ./wwwroot
+COPY --from=node-build-env /appclient/client/out/browser ./wwwroot
 COPY --from=node-build-env /appclient/root/ /
 
 # ports and volumes
