--- a/apps/prowlarr/Dockerfile
+++ b/apps/prowlarr/Dockerfile
@@ -17,7 +17,7 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 USER root
 
 #hadolint ignore=DL3018
-RUN apk add --no-cache ca-certificates icu-libs libintl sqlite-libs xmlstarlet
+RUN apk add --no-cache ca-certificates icu-libs libintl sqlite-libs xmlstarlet postgresql-client pgloader
 #hadolint ignore=DL3059
 RUN \
     case "${TARGETPLATFORM}" in \
