--- a/apps/movie-roulette/Dockerfile
+++ b/apps/movie-roulette/Dockerfile
@@ -9,18 +9,10 @@ RUN git clone -b $VERSION  https://github.com/sahara101/Movie-Roulette.git /sour
 
 # Use an official Python runtime as a parent image
 FROM python:3.9-slim
-# Install required system packages
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-    arp-scan \
-    iputils-ping \
-    netcat-openbsd \
-    && rm -rf /var/lib/apt/lists/* \
-    && apt-get clean
-# Set the working directory in the container
+
 WORKDIR /app
 # Copy the current directory contents into the container at /app
-COPY . /app
+COPY --from=cloner /source/. /app
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 # Make port 4000 available to the world outside this container
