--- a/apps/movie-roulette/ci/goss.yaml
+++ b/apps/movie-roulette/ci/goss.yaml
@@ -1,8 +1,8 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
 process:
-  node:
-    running: gunicorn
+  gunicorn:
+    running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
