--- a/apps/decypharr/config.json
+++ b/apps/decypharr/config.json
@@ -16,7 +16,7 @@
     "qbittorrent": {
       "port": "8282",
       "download_folder": "/mnt/symlinks/",
-      "categories": ["sonarr", "radarr"],
+      "categories": ["sonarr", "radarr"]
     },
     "repair": {
       "enabled": false,
@@ -25,4 +25,4 @@
     },
     "use_auth": false,
     "log_level": "info"
-  }
+}
