--- a/apps/tmdb-addon/Dockerfile
+++ b/apps/tmdb-addon/Dockerfile
@@ -9,7 +9,7 @@ RUN apk update && apk upgrade && \
 
 RUN git clone  https://github.com/mrcanelas/tmdb-addon.git /source
 
-COPY apps/tmdb-addon/elfhosted.patch /
+# COPY apps/tmdb-addon/elfhosted.patch /
 
 # # Apply ElfHosted tweaks
 # RUN cd /source && \
@@ -18,7 +18,7 @@ COPY apps/tmdb-addon/elfhosted.patch /
 ## Upstream Dockerfile
 
 # Etapa de construção do frontend
-FROM node:22-alpine AS builder
+FROM node:20-alpine AS builder
 
 WORKDIR /app
 
@@ -35,10 +35,7 @@ COPY --from=cloner /source/. .
 RUN npm run build
 
 # Etapa de produção
-FROM node:18-alpine AS runner
-
-ENV FANART_API=setme
-ENV PORT=3000
+FROM node:20-alpine AS runner
 
 WORKDIR /app
 
@@ -55,7 +52,10 @@ COPY --from=builder /app/addon ./addon
 COPY --from=builder /app/dist ./dist
 
 # Copia a pasta public com as imagens
-COPY --from=builder /app/configure/public ./public
+COPY --from=builder /app/public ./public
+
+# Exposição da porta
+EXPOSE 1337
 
 # Comando para iniciar o servidor
-ENTRYPOINT ["node", "addon/server.js"]
+ENTRYPOINT ["node", "addon/server.js"] 
