--- a/apps/symlink-cleaner/Dockerfile
+++ b/apps/symlink-cleaner/Dockerfile
@@ -9,8 +9,8 @@ RUN git clone https://github.com/bsm-elf/symlink-cleaner.git /source
 
 FROM python:3.9-slim
 WORKDIR /app
-COPY requirements.txt .
+COPY --from=cloner /source/requirements.txt .
 RUN pip install -r requirements.txt
-COPY . .
+COPY --from=cloner /source/. .
 EXPOSE 5000
 CMD ["python", "symlink_cleaner.py", "--config", "/app/config.json"]
