--- a/apps/symlink-cleaner/ci/goss.yaml
+++ b/apps/symlink-cleaner/ci/goss.yaml
@@ -5,6 +5,6 @@ process:
     running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
-http:
-  http://localhost:5000:
-    status: 200
+# http:
+#   http://localhost:5000:
+#     status: 200
