try to upadte symlink-cleaner
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/symlink-cleaner/Dockerfile
+++ b/apps/symlink-cleaner/Dockerfile
@@ -9,6 +9,12 @@ RUN git clone https://github.com/bsm-elf/symlink-cleaner.git /source
 
 FROM python:3.9-slim
 WORKDIR /app
+
+# Force our preferred user
+ARG user=elfie
+RUN groupadd -g 568 $user && useradd -d /config --create-home --uid 568 --gid 568 --shell /bin/bash $user
+USER 568
+
 COPY --from=cloner /source/requirements.txt .
 RUN pip install -r requirements.txt
 COPY --from=cloner /source/. .
