can we run byparr non-root?
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/byparr/Dockerfile
+++ b/apps/byparr/Dockerfile
@@ -27,6 +27,11 @@ WORKDIR /app
 RUN apt-get update && \
     apt-get install -y --no-install-recommends --no-install-suggests xauth xvfb scrot curl chromium chromium-driver ca-certificates
 
+# Force our preferred user
+ARG user=elfie
+RUN groupadd -g 568 $user && useradd -d /config --create-home --uid 568 --gid 568 --shell /bin/bash $user
+USER 568
+
 ADD https://astral.sh/uv/install.sh install.sh
 RUN sh install.sh
 COPY --from=cloner /source/pyproject.toml /source/uv.lock ./
