--- a/apps/byparr/Dockerfile
+++ b/apps/byparr/Dockerfile
@@ -25,13 +25,15 @@ ENV PATH="${HOME}/.local/bin:$PATH"
 RUN apt-get update && \
     apt-get install -y --no-install-recommends --no-install-suggests xauth xvfb scrot curl chromium chromium-driver ca-certificates
 
+ADD https://astral.sh/uv/install.sh install.sh
+RUN chmod +x install.sh
+
 # Force our preferred user
 ARG user=elfie
 RUN groupadd -g 568 $user && useradd -d /app --create-home --uid 568 --gid 568 --shell /bin/bash $user
 USER 568
 
 WORKDIR /app
-ADD https://astral.sh/uv/install.sh install.sh
 RUN sh install.sh
 
 COPY --from=cloner /source/pyproject.toml /source/uv.lock ./
