--- a/apps/byparr/Dockerfile
+++ b/apps/byparr/Dockerfile
@@ -25,15 +25,16 @@ ENV PATH="${HOME}/.local/bin:$PATH"
 RUN apt-get update && \
     apt-get install -y --no-install-recommends --no-install-suggests xauth xvfb scrot curl chromium chromium-driver ca-certificates
 
+WORKDIR /app
 ADD https://astral.sh/uv/install.sh install.sh
 RUN chmod +x install.sh
 
 # Force our preferred user
 ARG user=elfie
-RUN groupadd -g 568 $user && useradd -d /app --create-home --uid 568 --gid 568 --shell /bin/bash $user
-USER 568
+RUN groupadd -g 568 $user && useradd -d /app --uid 568 --gid 568 --shell /bin/bash $user && \
+    chown $user /app -R
 
-WORKDIR /app
+USER 568
 RUN sh install.sh
 
 COPY --from=cloner /source/pyproject.toml /source/uv.lock ./
