--- a/apps/cwa-downloader/Dockerfile
+++ b/apps/cwa-downloader/Dockerfile
@@ -10,61 +10,52 @@ RUN apk update && apk upgrade && \
 RUN git clone  https://github.com/calibrain/calibre-web-automated-book-downloader.git /source
 
 
-## Upstream Dockerfile
-# Use Python slim image for smaller size
 FROM python:3.12-slim
 
-# Set environment variables
-ENV DEBIAN_FRONTEND=noninteractive
-ENV DOCKERMODE=true
-ENV PYTHONUNBUFFERED=1
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PIP_NO_CACHE_DIR=1
-ENV PIP_DISABLE_PIP_VERSION_CHECK=1
-ENV PIP_DEFAULT_TIMEOUT=100
-ENV NAME=Calibre-Web-Automated-Book-Downloader
-ENV FLASK_HOST=0.0.0.0
-ENV FLASK_PORT=8084
-ENV FLASK_DEBUG=0
-ENV CLOUDFLARE_PROXY_URL=http://localhost:8000
-ENV INGEST_DIR=/cwa-book-ingest
-ENV STATUS_TIMEOUT=3600
-ENV PYTHONPATH=/app
-ENV USE_CF_BYPASS=true
-ENV AA_BASE_URL=https://annas-archive.org
+ENV DEBIAN_FRONTEND=noninteractive \
+    DOCKERMODE=true \
+    PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PIP_NO_CACHE_DIR=1 \
+    PIP_DISABLE_PIP_VERSION_CHECK=1 \
+    PIP_DEFAULT_TIMEOUT=100 \
+    NAME=Calibre-Web-Automated-Book-Downloader \
+    FLASK_HOST=0.0.0.0 \
+    FLASK_PORT=8084 \
+    FLASK_DEBUG=0 \
+    STATUS_TIMEOUT=3600 \
+    PYTHONPATH=/app \
+    USE_CF_BYPASS=true \
+    AA_BASE_URL=https://annas-archive.org \
+    UID=1000 \
+    GID=100
 
-# Default UID and GID (can be overridden at runtime)
-ENV UID=1000
-ENV GID=100
+# Install minimal dependencies
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends --no-install-suggests \
+    curl \
+    xvfb \
+    chromium-driver \
+    dumb-init && \
+    rm -rf /var/lib/apt/lists/*
 
-# Set working directory
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends --no-install-suggests \
-    calibre p7zip curl gosu \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy requirements first for better caching
-COPY --from=cloner /source/requirements.txt .
-
-# Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+# Install Python dependencies including playwright
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt && \
+    rm -rf /root/.cache /app/.cache
 
 COPY --from=cloner /source/. .
+RUN chmod +x /app/entrypoint.sh && \
+    # Create necessary directories
+    mkdir -p /var/log/cwa-book-downloader && \
+    mkdir -p /cwa-book-ingest
 
-RUN chmod +x /app/check_health.sh && \
-    chmod +x /app/entrypoint.sh
-
-# Expose port
 EXPOSE ${FLASK_PORT}
 
-# Health check
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:${FLASK_PORT}/request/api/status || exit 1
 
-# Entrypoint
-ENTRYPOINT ["/app/entrypoint.sh"]
-
-# Start application
-CMD ["python", "-m", "app"]
+ENTRYPOINT ["/usr/bin/dumb-init", "--"]
+CMD ["/app/entrypoint.sh"]
