--- a/apps/fakearr/ci/goss.yaml
+++ b/apps/fakearr/ci/goss.yaml
@@ -6,5 +6,7 @@ process:
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
-  http://localhost:8080:
+  http://localhost:8080/iama.torrent:
     status: 200
+  http://localhost:8080/iama.nzb:
+    status: 200    
