add import script
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/radarr/Dockerfile
+++ b/apps/radarr/Dockerfile
@@ -43,6 +43,9 @@ ENV COMPlus_EnableDiagnostics=0
 
 COPY ./apps/radarr/config.xml.tmpl /app/config.xml.tmpl
 COPY ./apps/radarr/entrypoint.sh /entrypoint.sh
+COPY ./apps/radarr/elf-import.sh /elf-import.sh
+RUN chmod 755 /elf-import.sh
+
 CMD ["/entrypoint.sh"]
 
 LABEL org.opencontainers.image.source="https://github.com/Radarr/Radarr"
