--- a/apps/sonarr/Dockerfile
+++ b/apps/sonarr/Dockerfile
@@ -40,6 +40,9 @@ USER 568
 
 COPY ./apps/sonarr/config.xml.tmpl /app/config.xml.tmpl
 COPY ./apps/sonarr/entrypoint.sh /entrypoint.sh
+COPY ./apps/sonarr/elf-import.sh /elf-import.sh
+RUN chmod 755 /elf-import.sh
+
 CMD ["/entrypoint.sh"]
 
 LABEL org.opencontainers.image.title="${SONARR__INSTANCE_NAME} (${SONARR__BRANCH})"
