--- a/apps/fakearr/Dockerfile
+++ b/apps/fakearr/Dockerfile
@@ -7,23 +7,38 @@ RUN apk update && apk upgrade && \
 
 RUN git clone https://github.com/elfhosted/fakearr.git /source
 
-# Use Go as the build stage
+# Use the official Go image as the base image
 FROM golang:1.20-alpine AS builder
+
+# Set the working directory inside the container
 WORKDIR /app
 
-# Copy Go modules and download dependencies
-COPY --from=cloner /source/go.mod ./
-RUN go mod tidy && \
-    go mod download
+# Copy go mod and sum files
+COPY --from=cloner /source/go.mod /source/go.sum* ./
 
-# Copy the rest of the application
-COPY --from=cloner /source/. .
+# Download dependencies
+RUN go mod download
 
-# Build the binary
-RUN go build -o fakearr
+# Copy the source code into the container
+COPY /source/. .
 
-# Use a smaller final image
+# Build the application
+RUN CGO_ENABLED=0 GOOS=linux go build -o fakearr
+
+# Use a slim alpine image for the final container
 FROM alpine:latest
+
+# Install ca-certificates in case we need HTTPS
+RUN apk --no-cache add ca-certificates
+
+# Set the working directory
 WORKDIR /root/
+
+# Copy the pre-built binary from the builder stage
 COPY --from=builder /app/fakearr .
-CMD ["./fakearr"]
+
+# Expose the port the app runs on
+EXPOSE 8000
+
+# Command to run the executable
+ENTRYPOINT ["./fakearr"]
