--- a/apps/fakearr/Dockerfile
+++ b/apps/fakearr/Dockerfile
@@ -7,38 +7,20 @@ RUN apk update && apk upgrade && \
 
 RUN git clone https://github.com/elfhosted/fakearr.git /source
 
-# Use the official Go image as the base image
-FROM golang:1.20-alpine AS builder
+# Use an official Python runtime as the base image
+FROM python:3.9-slim
 
-# Set the working directory inside the container
+# Set the working directory in the container
 WORKDIR /app
 
-# Copy go mod and sum files
-COPY --from=cloner /source/go.mod /source/go.sum* ./
+# Copy the current directory contents into the container at /app
+COPY --from=cloner /source/. /app
 
-# Download dependencies
-RUN go mod download
+# Install any dependencies the app needs (e.g., Flask, xml, etc.)
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the source code into the container
-COPY --from=cloner /source/. .
+# Define environment variable (optional)
+ENV FLASK_APP=app.py
 
-# Build the application
-RUN CGO_ENABLED=0 GOOS=linux go build -o fakearr
-
-# Use a slim alpine image for the final container
-FROM alpine:latest
-
-# Install ca-certificates in case we need HTTPS
-RUN apk --no-cache add ca-certificates
-
-# Set the working directory
-WORKDIR /root/
-
-# Copy the pre-built binary from the builder stage
-COPY --from=builder /app/fakearr .
-
-# Expose the port the app runs on
-EXPOSE 8000
-
-# Command to run the executable
-ENTRYPOINT ["./fakearr"]
+# Run the application
+CMD ["python", "fakearr.py"]
