--- a/apps/fakearr/Dockerfile
+++ b/apps/fakearr/Dockerfile
@@ -20,7 +20,7 @@ COPY --from=cloner /source/. /app
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Define environment variable (optional)
-ENV FLASK_APP=app.py
+ENV FLASK_APP=fakearr.py
 
 # Run the application
-CMD ["python", "fakearr.py"]
+CMD ["uvicorn", "app_asgi:app", "--host", "0.0.0.0", "--port", "5001"]
