--- a/apps/fakearr/ci/goss.yaml
+++ b/apps/fakearr/ci/goss.yaml
@@ -1,7 +1,7 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
 process:
-  python:
+  uvicorn:
     running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
