--- a/apps/radarr/Dockerfile
+++ b/apps/radarr/Dockerfile
@@ -1,3 +1,5 @@
+FROM ghcr.io/elfhosted/ffprobe-shim:rolling@sha256:082a1ae4ea4469b0484d79d166e97e02f0dfa3a0dfce971409d298cdcb756177 as ffprobe-shim
+
 FROM ghcr.io/elfhosted/alpine-edge:rolling@sha256:31272a3b40aa1d0e1471d0429b99ac6ef9a35d5c54aa584881b54924043f83bc
 
 ARG TARGETPLATFORM
@@ -44,6 +46,11 @@ ENV COMPlus_EnableDiagnostics=0
 COPY ./apps/radarr/config.xml.tmpl /app/config.xml.tmpl
 COPY ./apps/radarr/entrypoint.sh /entrypoint.sh
 COPY ./apps/radarr/elf-import.sh /elf-import.sh
+
+# Try to overwrite ffprobe with shim
+RUN mv app/bin/ffprobe app/bin/ffprobe_real
+COPY --from=ffprobe /ffprobe-shim /app/bin/ffprobe
+
 
 CMD ["/entrypoint.sh"]
 
