--- a/apps/radarr/Dockerfile
+++ b/apps/radarr/Dockerfile
@@ -49,7 +49,7 @@ COPY ./apps/radarr/elf-import.sh /elf-import.sh
 
 # Try to overwrite ffprobe with shim
 RUN mv app/bin/ffprobe app/bin/ffprobe-real
-COPY --from=ffprobe /ffprobe-shim /app/bin/ffprobe
+COPY --from=ffprobe-shim /ffprobe-shim /app/bin/ffprobe
 
 
 CMD ["/entrypoint.sh"]
