--- a/apps/sonarr/Dockerfile
+++ b/apps/sonarr/Dockerfile
@@ -1,3 +1,5 @@
+FROM ghcr.io/elfhosted/ffprobe-shim:rolling as ffprobe-shim
+
 FROM ghcr.io/elfhosted/alpine-edge:rolling@sha256:31272a3b40aa1d0e1471d0429b99ac6ef9a35d5c54aa584881b54924043f83bc
 
 ARG TARGETPLATFORM
